force-app/main/default/objects/Ledger__c/Ledger__c.object-meta.xml
<CustomObject>
    <label>Ledger</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Ledger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ledgers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>