force-app/main/default/objects/Ledger__c/fields/Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>Charge_Name__c</fullName>
    <label>Charge Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demand Cost</fullName>
            </value>
            <value>
                <fullName>Demand Tax</fullName>
            </value>
            <value>
                <fullName>Demand Interest</fullName>
            </value>
            <value>
                <fullName>Flat Cost</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>TDS Challan</fullName>
            </value>
            <value>
                <fullName>Interest GST</fullName>
            </value>
            <value>
                <fullName>TDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>