force-app/main/default/objects/Ledger__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>Demand__r.Due_Date__c</formula>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>