force-app/main/default/objects/Ledger__c/fields/Tax_Ledger__c.field-meta.xml
<CustomField>
    <fullName>Tax_Ledger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Ledger</label>
    <type>Checkbox</type>
</CustomField>